fix: cut content on bottom on mobile screens

--- a/css/output.css
+++ b/css/output.css
@@ -749,6 +749,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
